<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <artifactId>flexcaptcha</artifactId>
    <build>
        <plugins>
            <!--configure Maven to deploy to the OSSRH Nexus Repository Manager -->
            <plugin>
                <artifactId>nexus-staging-maven-plugin</artifactId>
                <configuration>
                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
                    <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
                    <serverId>ossrh</serverId>
                </configuration>
                <extensions>true</extensions>
                <groupId>org.sonatype.plugins</groupId>
                <version>1.6.13</version>
            </plugin>
            <!--get Source jar files generated -->
            <plugin>
                <artifactId>maven-source-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                        <id>attach-sources</id>
                    </execution>
                </executions>
                <groupId>org.apache.maven.plugins</groupId>
                <version>3.3.0</version>
            </plugin>
            <!--get Javadoc files generated -->
            <plugin>
                <artifactId>maven-javadoc-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                        <id>attach-javadocs</id>
                    </execution>
                </executions>
                <groupId>org.apache.maven.plugins</groupId>
                <version>3.6.2</version>
            </plugin>
            <!--sign the components -->
            <plugin>
                <artifactId>maven-gpg-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>sign</goal>
                        </goals>
                        <id>sign-artifacts</id>
                        <phase>verify</phase>
                    </execution>
                </executions>
                <groupId>org.apache.maven.plugins</groupId>
                <version>3.1.0</version>
            </plugin>
        </plugins>
    </build>
    <dependencies>
        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
        <dependency>
            <artifactId>lombok</artifactId>
            <groupId>org.projectlombok</groupId>
            <scope>provided</scope>
            <version>1.18.34</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
        <dependency>
            <artifactId>commons-lang3</artifactId>
            <groupId>org.apache.commons</groupId>
            <version>3.14.0</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/com.jhlabs/filters -->
        <dependency>
            <artifactId>filters</artifactId>
            <groupId>com.jhlabs</groupId>
            <version>2.0.235-1</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
        <dependency>
            <artifactId>mockito-core</artifactId>
            <groupId>org.mockito</groupId>
            <scope>test</scope>
            <version>5.12.0</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.11.0-M2</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <description>Simple Captcha generation and validation</description>
    <developers>
        <developer>
            <email>forstery1751@gmail.com</email>
            <id>yaforster</id>
            <name>Yannick Forster</name>
            <roles>
                <role>developer</role>
            </roles>
            <timezone>Europe/Berlin</timezone>
        </developer>
    </developers>
    <distributionManagement>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
        <repository>
            <id>ossrh</id>
            <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
    </distributionManagement>
    <groupId>io.github.yaforster</groupId>
    <licenses>
        <license>
            <distribution>repo</distribution>
            <name>Apache License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>
    <modelVersion>4.0.0</modelVersion>
    <name>Flexible Captcha</name>
    <properties>
        <jvm.options>--illegal-access=permit</jvm.options>
        <main.basedir>${basedir}/../..</main.basedir>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <scm>
        <developerConnection>scm:git@github.com:4ster1751/flexcaptcha.git</developerConnection>
        <url>https://github.com/4ster1751/flexcaptcha.git</url>
    </scm>
    <url>https://github.com/yaforster/flexcaptcha</url>
    <version>2.0.1</version>
</project>
